# android-honda-afr

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/Assets/Arduino/: spartan_arduino_comm.ino
app/Assets/GaugeGenerator/: main.py
app/src/androidTest/java/com/hondaafr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: GUIDs.txt  Master.bank  Master.strings.bank  gauge.psd  lcd-resized.psd  lcd.psd  needle.psd
app/src/main/cpp/: engine_sound.cpp
app/src/main/cpp/fmod_plugin/: fmod_distance_filter.cpp  fmod_gain.cpp  fmod_noise.cpp
app/src/main/java/com/hondaafr/: MainActivity.java  MainPagerAdapter.java  MainViewModel.java
app/src/main/java/com/hondaafr/Libs/Bluetooth/: BluetoothConnection.java  BluetoothConnectionListener.java  BluetoothConnectionManager.java  BluetoothDeviceData.java  BluetoothHelper.java  BluetoothStates.java  BluetoothUtils.java
app/src/main/java/com/hondaafr/Libs/Bluetooth/Services/: BluetoothConnectedReceiver.java  BluetoothForegroundService.java  BluetoothService.java
app/src/main/java/com/hondaafr/Libs/EngineSound/: EngineSound.java  EngineSoundPlayer.java
app/src/main/java/com/hondaafr/Libs/Helpers/: AverageList.java  Cluster.java  CsvHelper.java  DataLog.java  DataLogEntry.java  Debuggable.java  EdgeToEdgeHelper.java  FuelConsumption.java  FuelTotalHistory.java  Permissions.java  ReadingHistory.java  Studio.java  TimeChart.java  TotalLitersConsumed.java
app/src/main/java/com/hondaafr/Libs/UI/: AdaptiveAfrView.java  ClusterView.java  ConnectionView.java  ImageButtonRounded.java  ScientificView.java  UiView.java
app/src/main/res/drawable/: cluster_light_bg.xml  fuel_gauge_lcd_text_bg.xml  honda_button.xml  honda_button_pushed.xml  ic_launcher_foreground.xml  ic_minus.xml  image_button_off.xml  image_button_on.xml  image_button_togleable.xml  legend_fuel_gradient.xml
app/src/main/res/layout/: activity_main.xml  dialog_cluster_configuration.xml  dialog_fuel_stats.xml  fragment_adaptive_afr.xml  fragment_cluster.xml  fragment_connection.xml  fragment_map.xml  fragment_obd_log.xml  fragment_scientific.xml  item_log.xml  item_obd_log.xml
app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-sw360dp/: dimens.xml
app/src/test/java/com/hondaafr/: ExampleUnitTest.java
(+98 files in other folders)
